corrects topics header alignment

--- a/ui/css/article.css
+++ b/ui/css/article.css
@@ -3008,6 +3008,7 @@ footer .footer__menu {
   font-size: 1.1em;
   padding-bottom: 8px;
   text-transform: uppercase;
+  text-align: left;
   margin: 0px;
   border-bottom-style: solid;
   border-width: 1px;
